--- a/ODExplorer/ODExplorer.csproj
+++ b/ODExplorer/ODExplorer.csproj
@@ -34,8 +34,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Ookii.Dialogs.Wpf" Version="5.0.1" />
+    <PackageReference Include="ToastNotifications" Version="2.5.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -67,6 +68,10 @@
     <Resource Include="Fonts\EUROSTILE.TTF">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Utils\NewFolder\" />
   </ItemGroup>
 
 </Project>
