--- a/ODExplorer/ODExplorer.csproj
+++ b/ODExplorer/ODExplorer.csproj
@@ -7,10 +7,11 @@
     <RootNamespace>ODExplorer</RootNamespace>
     <AssemblyName>ODExplorer</AssemblyName>
     <ApplicationIcon>astronaut.ico</ApplicationIcon>
-    <Version>1.0.7</Version>
+    <Version>1.0.8</Version>
     <Authors>WarmedxMints</Authors>
     <PlatformTarget>x64</PlatformTarget>
     <Configurations>Debug;Release;Portable</Configurations>
+    <SignAssembly>False</SignAssembly>
   </PropertyGroup>
 
   <ItemGroup>
