Added an option to hide biology signal below a set value in the exo view Added a semitransparant view for overlays and made the transparant mode click through (Hold shift when the mouse is over the popup to interact with it) Made switching between accounts quicker (it no longer reads the same files again)

--- a/ODExplorer/ODExplorer.csproj
+++ b/ODExplorer/ODExplorer.csproj
@@ -33,6 +33,7 @@
     <None Remove="Resources\Fleetcarrier_Icon.png" />
     <None Remove="Resources\GitHub_Logo_White.png" />
     <None Remove="Resources\GreenArrow.png" />
+    <None Remove="Resources\Hidden.png" />
     <None Remove="Resources\HorizontalCartoLayoutBtn.png" />
     <None Remove="Resources\Map-galaxy-map.png" />
     <None Remove="Resources\monitor.png" />
@@ -128,6 +129,7 @@
     <Resource Include="Resources\Fleetcarrier_Icon.png" />
     <Resource Include="Resources\GitHub_Logo_White.png" />
     <Resource Include="Resources\GreenArrow.png" />
+    <Resource Include="Resources\Hidden.png" />
     <Resource Include="Resources\HorizontalCartoLayoutBtn.png" />
     <Resource Include="Resources\Map-galaxy-map.png" />
     <Resource Include="Resources\monitor.png" />
