--- a/ODExplorer/ODExplorer.csproj
+++ b/ODExplorer/ODExplorer.csproj
@@ -116,10 +116,10 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="NLog" Version="5.3.4" />
     <PackageReference Include="System.Drawing.Common" Version="9.0.0" />
-    <PackageReference Include="ToastNotifications" Version="2.5.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="D:\ODrepos\ODUtils\ODUtils.csproj" />
+    <ProjectReference Include="D:\ODrepos\ToastNotifications\Src\ToastNotifications\ToastNotifications.csproj" />
     <ProjectReference Include="F:\GitHub\EliteJournalReader\EliteJournalReader\EliteJournalReader.csproj" />
   </ItemGroup>
   <ItemGroup>
